triggerHandlerFramework/force-app/main/default/objects/TriggerHandlerSetting__mdt/TriggerHandlerSetting__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Handler Setting</label>
    <pluralLabel>Trigger Handler Settings</pluralLabel>
</CustomObject>