triggerHandlerFramework/force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/AdvancedTriggerControl__c.field-meta.xml
<CustomField>
    <fullName>AdvancedTriggerControl__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enables advanced control of the trigger flow.</inlineHelpText>
    <label>Advanced Trigger Control</label>
    <type>Checkbox</type>
</CustomField>