triggerHandlerFramework/force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/AdvancedTriggerFlowCustomData__c.field-meta.xml
<CustomField>
    <fullName>AdvancedTriggerFlowCustomData__c</fullName>
    <label>Advanced Trigger Flow Custom Data</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>