triggerHandlerFramework/force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/DisableAfterDelete__c.field-meta.xml
<CustomField>
    <fullName>DisableAfterDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable After Delete</label>
    <type>Checkbox</type>
</CustomField>