triggerHandlerFramework/force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/DisableAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>DisableAfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable After Insert</label>
    <type>Checkbox</type>
</CustomField>