triggerHandlerFramework/force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/DisableAfterUndelete__c.field-meta.xml
<CustomField>
    <fullName>DisableAfterUndelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable After Undelete</label>
    <type>Checkbox</type>
</CustomField>