triggerHandlerFramework/force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/DisableAfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>DisableAfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable After Update</label>
    <type>Checkbox</type>
</CustomField>