triggerHandlerFramework/force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/DisableBeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>DisableBeforeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Before Delete</label>
    <type>Checkbox</type>
</CustomField>