triggerHandlerFramework/force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/DisableBeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>DisableBeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Before Insert</label>
    <type>Checkbox</type>
</CustomField>