triggerHandlerFramework/force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/DisableBeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>DisableBeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Before Update</label>
    <type>Checkbox</type>
</CustomField>