triggerHandlerFramework/force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/EnableLimitLogging__c.field-meta.xml
<CustomField>
    <fullName>EnableLimitLogging__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Adds debug logs for APEX limits every trigger event executed</inlineHelpText>
    <label>Enable Limit Logging</label>
    <type>Checkbox</type>
</CustomField>