triggerHandlerFramework/force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/EnableLogging__c.field-meta.xml
<CustomField>
    <fullName>EnableLogging__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Adds debug log statements that will help trace the triggers being executed</inlineHelpText>
    <label>Enable Logging</label>
    <type>Checkbox</type>
</CustomField>