triggerHandlerFramework/force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>TriggerHandlerSettings</relationshipLabel>
    <relationshipName>TriggerHandlerSettings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>